bootstrap/argo-cd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-ingress-tunnel
    namespace: argocd
spec:
    ingressClassName: cloudflare-tunnel
    rules:
        - host: argo-cd.nkaewam.dev
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server
                            port:
                                number: 80
